--- a/The Video Download.html
+++ b/The Video Download.html
@@ -46,7 +46,7 @@ div.WordSection1
 
 <p class=MsoNormal align=center style='text-align:center'><b><span
 style='font-size:48.0pt;line-height:107%;font-family:"Times New Roman","serif"'>The
-Video Download™</span></b></p>
+Video Downloadâ„¢</span></b></p>
 
 <p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%;
 font-family:"Times New Roman","serif"'>Want to upload content? Email <a
@@ -89,7 +89,7 @@ style='font-size:18.0pt;line-height:107%;font-family:"Times New Roman","serif"'>
 
 <p class=MsoNormal><b><span style='font-size:16.0pt;line-height:107%;
 font-family:"Times New Roman","serif"'>T</span></b><b><span style='font-size:
-14.0pt;line-height:107%;font-family:"Times New Roman","serif"'>VD©</span></b></p>
+14.0pt;line-height:107%;font-family:"Times New Roman","serif"'>VDÂ©</span></b></p>
 
 </div>
 
